@@ -12,6 +12,9 @@
 /**
  Generates a tap on the specified view.
  */
-@interface SIUITapGenerator : SIUIAbstractEventGenerator
+@interface SIUITapGenerator : SIUIAbstractEventGenerator 
+
+/// Where the tap should occur. If this is equal to {CGFLOAT_MAX, CGFLOAT_MAX} then the tap will occur at the exact center of the view.
+@property (nonatomic) CGPoint tapPoint;
 
 @end
