@@ -13,8 +13,25 @@
 
 @implementation SIUITapGenerator
 
+@synthesize tapPoint;
+
+-(id) initWithView:(UIView *) view {
+   self = [super initWithView:view];
+   if (self) {
+      self.tapPoint = CGPointMake(CGFLOAT_MAX, CGFLOAT_MAX);
+   }
+   return self;
+}
+
 -(void) sendEvents {
    DC_LOG(@"Creating tap sequence for a %@", NSStringFromClass([self.view class]));
+	
+	// Position the tap if needed.
+	if (!CGPointEqualToPoint(self.tapPoint, CGPointMake(CGFLOAT_MAX, CGFLOAT_MAX))) {
+		[touch setLocationInWindow:[self.view pointInWindowFromPointInView:self.tapPoint]];
+	}
+	
+	// Now tap.
    SIUIEventSender *sender = [SIUIEventSender sender];
    [sender sendEvent:event];
    [touch setPhase:UITouchPhaseEnded];
